fixin slick slider on small screens

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,7 +8,7 @@ $grey: #edeeee;
     url("../fonts/Calibri-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
-  font-display: swap;
+  font-display: block; /* No longer causing FOUT */
 }
 
 @font-face {
@@ -17,7 +17,7 @@ $grey: #edeeee;
     url("../fonts/Calibri.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: block; /* No longer causing FOUT */
 }
 
 .btn,
@@ -66,43 +66,6 @@ h6 {
   }
 }
 
-body.variant {
-  .page {
-    display: grid;
-    grid-template-rows: auto 1fr auto auto;
-    header {
-      align-self: start;
-    }
-    main {
-      align-self: end;
-      position: relative;
-      top: -300px;
-    }
-  }
-
-  .image-grid {
-    //border: 3px dashed salmon;
-    overflow: hidden;
-    max-height: 250px;
-    gap: 2rem;
-    & > * {
-      height: 100%;
-      width: auto;
-      aspect-ratio: unset;
-    }
-    img {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  .address {
-    //border: 1px solid green;
-    display: flex;
-    align-items: flex-end;
-  }
-}
-
 html {
   min-height: 100vh;
   width: 100%;
@@ -141,7 +104,7 @@ html {
 .page {
   //border: 1px solid purple;
   min-height: 100%;
-  display: grid;
+  //display: grid; // breaks slick slider on very small screens
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
   // https://dev.to/niorad/keeping-the-footer-at-the-bottom-with-css-grid-15mf
@@ -188,24 +151,6 @@ a:hover {
   text-decoration: none;
 }
 
-//@import "images";
-
-.static-image-grid {
-  //border: 1px solid red;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  img {
-    flex: 0 0 30%;
-    max-height: 350px;
-    width: auto;
-    margin: 0.5rem 0;
-    &:last-child {
-      flex-grow: 0;
-    }
-  }
-}
-
 footer {
   border-top: 1px solid black;
   padding-top: 0.7rem;
@@ -224,6 +169,11 @@ footer {
     // display: flex;
     // align-content: space-around;
   }
+}
+
+.slick-slider {
+  transform: scale(0.8);
+  border: dashed 1px purple;
 }
 
 // smaller then 1200px
@@ -253,8 +203,9 @@ footer {
   }
 
   /* bah dirty */
-  .static-image-grid img {
-    flex: 0 0 calc(50% - 0.5rem);
+
+  .page {
+    display: block; // unset grid for too wide slick slider: https://stackoverflow.com/questions/45735511/slick-slider-gets-wrong-width
   }
 }
 
@@ -269,11 +220,22 @@ footer {
 .slick-next:before,
 .slick-prev:before {
   color: $blue;
+  transform: scale(1.5);
 }
 
-// div[class^='col'], div[class*=' col']{
-//     border: 1px solid red;
-// }
+.slick-prev {
+  left: -75px;
+}
+
+.slick-next {
+  right: -75px;
+}
+
+div[class^="col"],
+div[class*=" col"] {
+  border: 1px solid red;
+}
+
 .slick-list {
   margin: 0 -50px !important;
 }
@@ -285,9 +247,10 @@ footer {
 
 .static-image-grid {
   .items {
-    width: 90%;
-    margin: 0px auto;
+    //width: 90%;
+    //margin: 0px auto;
     //margin-top: 100px;
+    //overflow: hidden;
   }
 
   .slick-slide {
@@ -302,4 +265,8 @@ footer {
   .slick-arrow {
     z-index: 10000;
   }
+}
+
+body {
+  padding: 1rem;
 }
